[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"
authors = ["Alex Morton <mortonar01@gmail.com>"]

[package.metadata.bootimage]
test-args = [
    # I/O mapped device - writing to it causes QEMU to exit with the value written
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # Redirect serial output to stdout
    "-serial", "stdio", "-display", "none"
]
# QEMU maps our exit code (0x10 on success) with: (0x10 << 1) | 1 = 33
test-success-exit-code = 33
test-timeout = 300

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[[bin]]
name = "blog_os"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false